--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
 }
 #todo-list{
     color:red;
+    list-style-type: none
 }
 
 #btn1{
@@ -24,6 +25,16 @@ body{
     left: 500px;
     width: 60px;
     background-color:white;
+    border:1px solid #a1a1a1;
+    border-radius:10px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+#btn1:hover {
+    background-color: #4CAF50;
+    color: white;
 }
 
 #btn2{
@@ -31,4 +42,14 @@ body{
     left: 440px;
     width: 60px;
     background-color:white;
+    border:1px solid #a1a1a1;
+    border-radius:10px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+#btn2:hover {
+    background-color: #4CAF50;
+    color: white;
 }
